--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "remark": "^14.0.3",
